Updated curse to speak to proper update state.

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -1,6 +1,6 @@
 <p><span style="color: #ff0000; font-size: 36px;">!!!NOTICE!!!</span></p>
 <p>This mod does not include any vehicles by default! If you are getting a warning message about missing packs, please download one of the fine packs linked in the Vehicle Packs section below! People complaining about "teh notice in mah face" will be ignored!</p>
-<p>Also, this mod will NOT be updating to higher MC versions.  Mojang has completely re-done and messed up the rendering pipeline for no gain and all pain for modders.  Combined with Forge being jerks, and mods splitting to Fabric, it is not worthwhile to update IV to higher versions.  However, if you want some features from higher MC versions in IV, come see us on the Discord!</p>
+<p>Also, if you're here to ask about updating to higher MC, then go away.  The update process is being made significantly harder than prior updates due to the rendering system overhaul that Mojang implemented.  Rest assured that IV WILL update ... eventually.  If you have time to spare though, it would be greatly appreciated to have an extra hand to help with the slew of minor features content creators keep on wanting!</p>
 <br>
 <p>Now with that out of the way....</p>
 <p><span style="font-size: 36px;">WE PROUDLY PRESENT TO YOU:</span><img src="https://media.forgecdn.net/attachments/245/826/banner.png" width="1700" height="715" /></p>
