Updated to include Blocky Rage

--- a/src/CurseSite.html
+++ b/src/CurseSite.html
@@ -61,6 +61,7 @@
 <br>
 <h4><strong>Small, New, and Old Packs.</strong></h4>
 <ul>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-blocky-rage">Blocky Rage:</a></strong>A pack that adds different cars that can be disassembled.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/warfare-44-content-pack-immersive-vehicles">Warfare 44:</a></strong>A selection of highly-detailed WWII era tanks.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/potato-vehicle-industries">Potato Vehicle Industries:</a></strong>For when nothing is good enough, Hashim as you covered with some exelently polished vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/osog-city-cars">City Cars:</a></strong>Pack for ordinary city cars, 1980-1990 and modern. Mostly Russian.</li>
