--- a/CurseSite.html
+++ b/CurseSite.html
@@ -36,7 +36,9 @@
 <br>
 <h4><strong>Other Brands. From Various Authors</strong></h4>
 <ul>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/subcraftica">Subcraftica:</a></strong>Working seamouth submarine with upgrade modules, explore the minecraft sea in comfort!.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/potato-vehicle-industries">Potato Vehicle Industries:</a></strong>Tanks, fighter jets, helicopters and ground vehicles! Fit for all your military needs.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ: Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-craftspeed">Craftspeed:</a></strong> Getting a stock car is just the beginning, time to make it your own unique project!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/mts-generals-general-vehicles-pack">GGVP: General's General Vehicles Pack:</a></strong>Mostly Random Vehicles from FTR , WWII and MW</li>
@@ -62,7 +64,6 @@
 <ul>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-blocky-rage">Blocky Rage:</a></strong>A pack that adds different cars that can be disassembled.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/warfare-44-content-pack-immersive-vehicles">Warfare 44:</a></strong>A selection of highly-detailed WWII era tanks.</li>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/potato-vehicle-industries">Potato Vehicle Industries:</a></strong>For when nothing is good enough, Hashim as you covered with some exelently polished vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/osog-city-cars">City Cars:</a></strong>Pack for ordinary city cars, 1980-1990 and modern. Mostly Russian.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iv-naomi-retro-vehicles">Naomi Retro Vehicles:</a></strong>From old to new machinecraft to minecraft these cars are back once again.</li>
