--- a/CurseSite.html
+++ b/CurseSite.html
@@ -69,6 +69,7 @@
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iv-naomi-retro-vehicles">Naomi Retro Vehicles:</a></strong>From old to new machinecraft to minecraft these cars are back once again.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/spicy-sausesaig-gauge-pack-iv-mts">Spicy Sausesaig Gauge Pack:</a></strong>Adds a nifty flight display for GAP planes!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/kadwin-jurassic-park-vehicles-pack-mts-iv">Kadwin Jurassic Park Vehicles Pack:</a></strong>For when you need a vehicle to get you to that remote generic engineering lab.</li>
+<li><strong><a href="https://legacy.curseforge.com/minecraft/mc-mods/immersive-vehicles-vdeco"VDeco:</a></strong>Pack with furniture, decor, devices.</li>
 </ul>
 <br>
 <br>
