Add pack to curse page. Fix Hashim's typo

--- a/CurseSite.html
+++ b/CurseSite.html
@@ -36,7 +36,8 @@
 <br>
 <h4><strong>Other Brands. From Various Authors</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/subcraftica">Subcraftica:</a></strong>Working seamouth submarine with upgrade modules, explore the minecraft sea in comfort!.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/acme-heavy-industries-pack">ACME: ACME Heavy Industries:</a></strong>Realistic combat aviation on a budget, amongst other things. A pack dedicated to a balanced PVP experience.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/subcraftica">Subcraftica:</a></strong>Working seamoth submarine with upgrade modules, explore the minecraft sea in comfort!.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-vehicles-vanity">IVV: Immersive Vehicles Vanity:</a></strong>Bumper Stickers and Decoration Blocks galore!  Also contains vehicles.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/potato-vehicle-industries">Potato Vehicle Industries:</a></strong>Tanks, fighter jets, helicopters and ground vehicles! Fit for all your military needs.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/dkz-civilian-market">DKZ: Automotive Branch:</a></strong>A small pack that adds some classic vehicles. If UNU is too new for you, DKZ has you covered!</li>
