--- a/CurseSite.html
+++ b/CurseSite.html
@@ -62,7 +62,7 @@
 <br>
 <h4><strong>Small, New, and Old Packs.</strong></h4>
 <ul>
-<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/subcraftica">Subcraftica:</a></strong>Working seamouth submarine with upgrade modules, explore the minecraft sea in comfort!.</li>
+<li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/subcraftica">Subcraftica:</a></strong>Working seamouth submarine with upgrade modules, explore the minecraft sea in comfort!</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/osog-city-cars">City Cars:</a></strong>Pack for ordinary city cars, 1980-1990 and modern. Mostly Russian.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/randall-agriculture-pack">Randall Agriculture Pack:</a></strong>Tired of farming by hand? Colt 44 has planting and harvesting covered. Robots not included.</li>
 <li><strong><a href="https://www.curseforge.com/minecraft/mc-mods/iv-naomi-retro-vehicles">Naomi Retro Vehicles:</a></strong>From old to new machinecraft to minecraft these cars are back once again.</li>
